# stable-diffusion-environment

./: README.md
client/: index.html  index.js  serve.sh
server/: pyproject.toml  run.sh
server/src/server/: .gitignore  main.py
