[project]
name = "server"
version = "0.1.0"
description = "The server portion of stable-diffusion-environment."
authors = [
    {name = "svidovich",email = "samuel.vidovich@gmail.com"}
]
license = {text = "The Unlicense"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "diffusers[torch] (>=0.32.2,<0.33.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jsonlines (>=4.0.0,<5.0.0)"
]
packages = [{ include = "server", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
